# GNNTrackFinder-gpu

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  CTestCustom.cmake  CbmRoot_test.cmake  Dart.sh  README.md  autoinstall_framework.sh
MQ/: CMakeLists.txt  stop_MQ.sh
MQ/base/: CMakeLists.txt  CbmMQChannels.cxx  CbmMQChannels.h  CbmMQDefs.h  CbmMqTMessage.h
MQ/eTOF/: CMakeLists.txt  CbmDeviceEventBuilderEtofStar2019.cxx  CbmDeviceEventBuilderEtofStar2019.h  CbmDeviceTriggerHandlerEtof.cxx  CbmDeviceTriggerHandlerEtof.h  runEventBuilderEtofStar2019.cxx  runTriggerHandlerEtof.cxx  startMQ_EBStar2020.sh
MQ/histoServer/: CMakeLists.txt  CbmHistoServer.cxx  CbmHistoServer.h  CbmMqHistoServer.cxx  CbmMqHistoServer.h  runCbmHistoServer.cxx  runCbmMqHistoServer.cxx
MQ/hitbuilder/: CMakeLists.txt  CbmDeviceHitBuilderTof.cxx  CbmDeviceHitBuilderTof.h  runHitBuilderTof.cxx  runMQ_Cri2021.sh  runMQ_Mcbm2021.sh  startMQSamplerUnpackerParserverHitBuilder.sh.in  startMQ_Mcbm.sh.in  startMQ_Mcbm2018.sh  startMQ_Mcbm2020.sh  startMQ_Mcbm2021.sh  startMQ_Mcbm2022.sh  startMQ_Star2020.sh  startMQ_cosmicHD.sh  startMQ_cosmicMcbm.sh
MQ/mcbm/: CMakeLists.txt  CbmDeviceBmonMonitor.cxx  CbmDeviceBmonMonitor.h  CbmDeviceBuildDigiEvents.cxx  CbmDeviceBuildDigiEvents.h  CbmDeviceBuildRawEvents.cxx  CbmDeviceBuildRawEvents.h  CbmDeviceDigiEventSink.cxx  CbmDeviceDigiEventSink.h  CbmDeviceMcbmEventBuilderWin.cxx  CbmDeviceMcbmEventBuilderWin.h  CbmDeviceMcbmEventSink.cxx  CbmDeviceMcbmEventSink.h  CbmDeviceMcbmMonitorPulser.cxx  CbmDeviceMcbmMonitorPulser.h  CbmDeviceMcbmUnpack.cxx  CbmDeviceMcbmUnpack.h  CbmDeviceUnpack.cxx  CbmDeviceUnpack.h  UnpBuildSink_missing_features.txt  runBmonMonitor.cxx  runBuildDigiEvents.cxx  runBuildRawEvents.cxx  runDigiEventSink.cxx  runMcbmEventSink.cxx  runMcbmEvtBuilderWin.cxx  runMcbmMonitorPulser.cxx  runMcbmUnpack.cxx  runUnpack.cxx  startBmonMoni2022.sh.in  startBuildRawEvents2021.sh.in  startBuildRawEvents2022.sh.in  startBuildRawEventsCosmics2021.sh.in  startMQBuildRawEvents.sh.in  startMQMcbmEvtBuilderWin2020.sh.in  startMQMcbmPulserMonitor2020.sh.in
MQ/monitor/: CMakeLists.txt  CbmDeviceMonitorBmon.cxx  CbmDeviceMonitorBmon.h  CbmDeviceMonitorPsd.cxx  CbmDeviceMonitorPsd.h  CbmDeviceMonitorReqBmon.cxx  CbmDeviceMonitorReqBmon.h  CbmDeviceMonitorReqTof.cxx  CbmDeviceMonitorReqTof.h  CbmDeviceMonitorTof.cxx  CbmDeviceMonitorTof.h  runMonitorBmon.cxx  runMonitorPsd.cxx  runMonitorReqBmon.cxx  runMonitorReqTof.cxx  runMonitorTof.cxx  startMQSamplerBmonMonitor2020.sh.in  startMQSamplerBmonMonitor2021.sh.in  startMQSamplerMonitor.sh.in  startMQSamplerPsdMonitor2021.sh.in  startMQSamplerTofMonitor2020.sh.in  startMQSamplerTofMonitor2021.sh.in
MQ/parmq/: CMakeLists.txt  ParameterMQServer.cxx  ParameterMQServer.h  runParameterMQServer.cxx
MQ/sink/: CMakeLists.txt  CbmDevNullSink.cxx  CbmDevNullSink.h  CbmTsaComponentSink.cxx  CbmTsaComponentSink.h  runDevNullSink.cxx  runTsaComponentSink.cxx  startMQSamplerSink.sh.in
MQ/source/: CMakeLists.txt  CbmMCPointSource.cxx  CbmMCPointSource.h  CbmMQTsSamplerRepReq.cxx  CbmMQTsSamplerRepReq.h  CbmMQTsaInfo.cxx  CbmMQTsaInfo.h  CbmMQTsaMultiSampler.cxx  CbmMQTsaMultiSampler.h  CbmMQTsaMultiSamplerTof.cxx  CbmMQTsaMultiSamplerTof.h  CbmMQTsaSampler.cxx  CbmMQTsaSampler.h  CbmMQTsaSamplerTof.cxx  CbmMQTsaSamplerTof.h  CbmStsDigiSource.cxx  CbmStsDigiSource.h  CbmTsConsumerReqDevExample.cxx  CbmTsConsumerReqDevExample.h  runMCPointSource.cxx  runStsDigiSource.cxx  runTsConsumerReqExample.cxx  runTsSamplerRepReq.cxx  runTsaInfo.cxx  runTsaMultiSampler.cxx  runTsaMultiSamplerTof.cxx  runTsaSampler.cxx  runTsaSamplerTof.cxx  startMQInfo.sh.in  startMQSampler.sh.in
MQ/sts/: CMakeLists.txt  CbmDeviceMinimal.cxx  CbmDeviceMinimal.h  CbmDeviceStsLocalReco.cxx  CbmDeviceStsLocalReco.h  runStsLocalReco.cxx  startTest.sh.in
MQ/unpacker/: CMakeLists.txt  CbmDeviceUnpackTofCri.cxx  CbmDeviceUnpackTofCri.h  CbmDeviceUnpackTofMcbm2018.cxx  CbmDeviceUnpackTofMcbm2018.h  CbmDeviceUnpackTofStar2018.cxx  CbmDeviceUnpackTofStar2018.h  CbmTbDaqBuffer.cxx  CbmTbDaqBuffer.h  runUnpackTofCri.cxx  runUnpackTofMcbm2018.cxx  runUnpackTofStar2018.cxx  startMQSamplerUnpackerParserver.sh.in
algo/: CMakeLists.txt
algo/base/: AlgoTraits.h  AuxDigiData.h  BuildInfo.cxx.in  BuildInfo.h  ChainContext.cxx  ChainContext.h  Definitions.h  DigiData.cxx  DigiData.h  Exceptions.h  HistogramSender.h  MainConfig.cxx  MainConfig.h  Options.cxx  Options.h  PODVector.h  PartitionedSpan.h  PartitionedVector.h  RecoParams.cxx  RecoParams.h  SubChain.h  System.cxx  System.h
algo/ca/: CMakeLists.txt  TrackingChain.cxx  TrackingChain.h  TrackingChainConfig.h  TrackingDefs.h  TrackingSetup.cxx  TrackingSetup.h
algo/data/: CMakeLists.txt
algo/evbuild/: Config.cxx  Config.h  EventBuilder.cxx  EventBuilder.h  EventBuilderConfig.cxx  EventBuilderConfig.h  EventbuildChain.cxx  EventbuildChain.h
algo/evselector/: DigiEventSelector.cxx  DigiEventSelector.h  DigiEventSelectorConfig.cxx  DigiEventSelectorConfig.h  RecoEventSelectorMonitor.h
algo/global/: ParFiles.cxx  ParFiles.h  Reco.cxx  Reco.h  RecoResults.h  RecoResultsInputArchive.cxx  RecoResultsInputArchive.h  RecoResultsOutputArchive.cxx  RecoResultsOutputArchive.h  StorableRecoResults.cxx  StorableRecoResults.h
algo/kfp/: KfpV0Finder.cxx  KfpV0Finder.h  KfpV0FinderChain.cxx  KfpV0FinderChain.h  KfpV0FinderConfig.cxx  KfpV0FinderConfig.h  KfpV0FinderMonitor.h  KfpV0FinderQa.cxx  KfpV0FinderQa.h
algo/log/: AlgoFairloggerCompat.h  CMakeLists.txt
algo/qa/: Accumulators.h  CanvasConfig.cxx  CanvasConfig.h  DigiEventQa.cxx  DigiEventQa.h  Histo1D.cxx  Histo1D.h  Histogram.h  HistogramContainer.cxx  HistogramContainer.h  PadConfig.cxx  PadConfig.h  QaData.cxx  QaData.h  QaManager.cxx  QaManager.h  QaTaskHeader.h  RecoGeneralQa.cxx  RecoGeneralQa.h  TaskProperties.h
algo/test/: CMakeLists.txt  _GTestChannelMapping.cxx  _GTestEventBuilder.cxx  (+7 more)
analysis/: CMakeLists.txt
core/: CMakeLists.txt
macro/: .gitignore  CMakeLists.txt
reco/: CMakeLists.txt
(+5001 files in other folders)
